tests/lustre/typechecking/shouldFail/type-width-error.lus
const w = 5;
const t = true;

node f(const n:int; x : bool) returns (b1 : bool^n);
let
  b1 = false ^ n;
tel

node b(x : bool) returns (xb : bool^t);
let
  --%PROPERTY xb[1] = false;
  xb = f(x);
tel